Don't stop logs import on error

Documentation to KTp::LogsImporter clearly states that when error() signal,
the import can still continue importing further logs, so we should not
quit in onError() slot.

REVIEW: 112189
BUG: 323821
FIXED-IN: 0.6.4